--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,26 @@ footer {
 .page-title {
     font-family: fantasy;
 }
+
+nav {
+    border: 1px solid black;
+    width: 100%;
+    height: 5%;
+    text-align: start;
+    margin: 10px;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: left;
+}
+
+li {
+    margin-left: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
