added some styling for the article section

--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,12 @@ section {
     margin: 10px;
     padding-left: 20px;
 }
+
+article {
+    border: 1px solid black;
+    width: 70%;
+    height: 30%;
+    text-align: start;
+    margin: 10px;
+    padding-left: 20px;
+}
