--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,18 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+}
+
 header {
     border: 1px solid black;
     width: 100%;
     height: 10%;
     text-align: center;
-    margin: 10px;
+    margin: 0;
 }
 
 footer {
@@ -15,7 +21,7 @@ footer {
     width: 100%;
     height: 10%;
     text-align: center;
-    margin: 10px;
+    margin: 0;
 }
 
 .page-title {
@@ -27,20 +33,20 @@ nav {
     width: 100%;
     height: 5%;
     text-align: start;
-    margin: 10px;
+    margin: 0;
 }
 
-ul {
+.nav-menu {
     list-style-type: none;
     display: flex;
     justify-content: left;
 }
 
-li {
+.nav-items {
     margin-left: 10px;
 }
 
-a {
+.nav-links {
     text-decoration: none;
     color: black;
 }
@@ -50,15 +56,25 @@ section {
     width: 70%;
     height: 30%;
     text-align: start;
-    margin: 10px;
+    margin: 0;
     padding-left: 20px;
 }
 
 article {
     border: 1px solid black;
     width: 70%;
-    height: 30%;
+    height: 45%;
     text-align: start;
-    margin: 10px;
+    margin: 0;
     padding-left: 20px;
+}
+
+aside {
+    border: 1px solid black;
+    width: 30%;
+    height: 75%;
+    text-align: start;
+    margin: 0;
+    padding-left: 20px;
+    float: right;
 }
